--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -5,12 +5,13 @@
 <div class="container add-todo-box-container">
   <div class="add-todo-box">
 
-    <form>
+    <!-- add form things and import ngForm in this component controller -->
+    <form #todoForm="ngForm" (ngSubmit)="onFormSubmit(todoForm)">
       <h2 class="title is-5">New Todo</h2>
 
       <div class="field is-grouped" style="margin: 0">
         <p class="control is-expanded">
-          <input required minlength="2" name="text" class="input" type="text"
+          <input ngModel #todoTextField="ngModel" required minlength="2" name="text" class="input" type="text"
             placeholder="Type todo text here ...">
         </p>
         <p class="control">
@@ -19,6 +20,11 @@
             Add
           </button>
         </p>
+      </div>
+
+      <div *ngIf="todoTextField.invalid && showValidationErrors">
+        <p class="help is-danger" *ngIf="todoTextField.errors.required">Please enter the text of your todo</p>
+        <p class="help is-danger" *ngIf="todoTextField.errors.minlength">Todo text must be at least 2 characters</p>
       </div>
 
     </form>
