edit and del fun complated

--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -7,12 +7,13 @@
     {{ todo.text }}
   </div>
 
+  <!-- TODO: add toolTips using tippy.js -->
   <div class="todo-controls-box" appToolTipSingleton (click)="$event.stopPropagation()">
     <div class="todo-control-button" appToolTip="Edit Todo" (click)="onEditClicked()">
       <i class="material-icons">edit</i>
     </div>
 
-    <div class="todo-control-button is-danger" appToolTip="Delete Todo">
+    <div class="todo-control-button is-danger" appToolTip="Delete Todo" (click)="onDeleteClicked()">
       <i class="material-icons">delete</i>
     </div>
   </div>
