--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -34,9 +34,7 @@
   <div class="container">
 
     <div class="todos-list">
-      <app-todo-item *ngFor="let todo of todos" [todo]="todo" (todoClicked)="toggleCompleted(todo)" (editClicked)="editTodo(todo)"></app-todo-item>
-      <!-- <app-todo-item *ngFor="let todo of todos" [todo]="todo" (todoClicked)="toggleCompleted(todo)"
-        (editClicked)="editTodo(todo)" (deleteClicked)="deleteTodo(todo)"></app-todo-item> -->
+      <app-todo-item *ngFor="let todo of todos" [todo]="todo" (todoClicked)="toggleCompleted(todo)" (editClicked)="editTodo(todo)" (deleteClicked)="deleteTodo(todo)"></app-todo-item>
     </div>
 
   </div>
